--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -1,6 +1,9 @@
 <header>
-  <h1> New Shiny Website by Satish</h1>
-  <h2> Rails version: <%= Rails.version %>
+  <h1>
+    Welcome to Shine <%= current_user.email %>
+  </h1>
+  <h2>
+    Rails version: <%= Rails.version %>
   </h2>
 </header>
 <section>
