Display each result in the component layout and implement pagination

--- a/app/views/customers/index.html.erb
+++ b/app/views/customers/index.html.erb
@@ -4,8 +4,9 @@
     <%= link_to 'Log Out', destroy_user_session_path, method: :delete %>
   </div>
 </header>
+
 <section class="search-form">
-  <%= form_for :customers, method: :get do |f| %>
+  <%= form_for :customers, method: :get do %>
       <div class="input-group input-group-lg">
         <%= label_tag :keywords, nil, class: "sr-only" %>
         <%= text_field_tag :keywords, nil,
@@ -17,28 +18,26 @@
       </div>
   <% end %>
 </section>
+
 <section class="search-results">
   <header>
-    <h1 class="h3">Search Results</h1>
+    <h2>Results</h2>
   </header>
-  <table class="table table-striped">
-    <thead>
-    <tr>
-      <th>First Name</th>
-      <th>Last Name</th>
-      <th>Email</th>
-      <th>Joined</th>
-    </tr>
-    </thead>
-    <tbody>
+  <%= render partial: 'pager', locals: {keywords: @keywords, page: @page} %>
+  <ol class="list-group">
     <%= @customers.each do |customer| %>
-        <tr>
-          <td><%= customer.first_name %></td>
-          <td><%= customer.last_name %></td>
-          <td><%= customer.email %></td>
-          <td><%= customer.created_at.to_date %></td>
-        </tr>
+        <li class="list-group-item clearfix">
+          <h3 class="pull-right">
+            <small class="text-uppercase">Joined</small>
+            <%= l customer.created_at.to_date %>
+          </h3>
+          <h2 class="h3">
+            <%= customer.first_name %> <%= customer.last_name %>
+          </h2>
+          <small><%= customer.username %></small>
+          <h4><%= customer.email %></h4>
+        </li>
     <% end %>
-    </tbody>
-  </table>
+  </ol>
+  <%= render partial: 'pager', locals: {keywords: @keywords, page: @page} %>
 </section>
