Added Capybara test for customer search feature

--- a/app/views/customers/index.html.erb
+++ b/app/views/customers/index.html.erb
@@ -20,15 +20,14 @@
     </form>
   </section>
 
-  <section class="search-results">
+  <section class="search-results" ng-if="customers.length > 0">
     <header>
       <h2>Results</h2>
     </header>
     <%= render partial: 'pager', locals: {keywords: @keywords, page: @page} %>
 
     <ol class="list-group">
-      <li class="list-group-item clearfix"
-          ng-repeat="customer in customers">
+      <li class="list-group-item clearfix"  ng-repeat="customer in customers">
         <h3 class="pull-right">
           <small class="text-uppercase">Joined</small>
           {{ customer.created_at | date }}
